src/components/DataTableStyles.sass
@import "./../constants.sass"

$horizontalScrollHeight: 20px

.compound-table
    display: flex
    flex-direction: column
    height: 100%
    overflow: hidden
    width: 100%
    height: calc(100% - #{$filterFormHeight})

    .compound-table-row-layout
        height: calc(100% - #{$horizontalScrollHeight})
        display: flex
        flex-direction: row

        &.compound-table-horizontal-scroll
            height: $horizontalScrollHeight

            .scroll-horizontal
                overflow-x: auto
                overflow-y: hidden

    .data-table
        border-right: 1px solid $colorDivider
        height: 100%

        &:last-child
            border-right: none

    .scroll-horizontal
        display: block
        flex-direction: column
        flex: 1
        border-right: 1px solid $colorDivider
        overflow: hidden
        height: 100%

        .data-table
            height: 100%
            display: block
            width: auto

.data-table
    box-sizing: border-box
    border-collapse: collapse
    display: flex
    flex-direction: column
    height: calc(100% - #{$filterFormHeight})
    overflow: hidden
    width: 100%

    &.scroll-disabled
        tbody
            overflow: hidden

    &.align-left
        td, th
            justify-content: flex-start

    &.align-right
        td, th
            justify-content: flex-end

    thead, tbody, tfoot
        display: block
        width: 100%

    tr
        display: flex
        flex-direction: row

        td, th
            color: $colorSecondaryText
            height: 40px
            display: flex
            flex-direction: row
            align-items: center
            flex: 1
            min-width: 130px
            padding: 0

        td
            color: $colorPrimaryText

            span
                border: 1px solid transparent
                display: inline-block
                padding: 0
                overflow: hidden
                text-overflow: ellipsis
                white-space: nowrap

            .clickable
                background-color: transparent
                border-radius: $borderRadius
                color: $colorPrimaryText
                cursor: pointer
                font-weight: 700
                transition: color 0.5s

                &:hover
                    color: $colorPrimary

            .input-field
                border: 1px solid $colorDivider
                border-radius: $borderRadius
                font-family: inherit
                font-size: inherit
                margin: 0
                padding: 0.25em
                text-align: inherit
                width: calc(100% - 1em)

                input
                    border: none
                    font-family: inherit
                    font-size: inherit
                    padding: 0
                    text-align: inherit

                &.input-date
                    align-items: center
                    display: flex
                    flex-direction: row
                    justify-content: space-between

                    input
                        height: 1em
                        width: 100%

                    button
                        background-color: $colorPrimaryDark
                        border: none
                        border-radius: $borderRadius
                        color: $colorAccentLight
                        cursor: pointer
                        display: inline-block
                        margin: -0.25em 0
                        padding: 0.25em
                        text-align: center
                        transition: background-color 0.5s
                        width: 2em

                        &:hover
                            background-color: $colorPrimary

        th
            text-transform: uppercase
            font-weight: 700
            padding: 0

        &:nth-child(even)
            td
                background-color: rgba(0, 0, 0, 0.05)

    thead
        tr
            th
                cursor: pointer
                transition: color 0.5s

                &:hover
                    color: $colorPrimaryText

                &.sorted-asc
                    &:after
                        content: " \2191"

                &.sorted-desc
                    &:after
                        content: " \2193"

    tbody
        max-height: 100%
        overflow-x: hidden
        overflow-y: auto
        border-bottom: 1px solid $colorDivider
        border-top: 1px solid $colorDivider

